--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <% if flash[:success] %>
+    <div><%= flash[:success] %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
