--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <% if flash[:success] %>
     <div><%= flash[:success] %></div>
     <% end %>
+
     <%= yield %>
+    <%= @name if @name.present? %>
   </body>
 </html>
